[package]
name = "file_logger"
version = "0.3.1"
authors = ["Stallmanifold <stallmanifold@gmail.com>"]
edition = "2018"
description = "A logger that outputs all messages to a file."


[dependencies]
chrono = "0.4.6"
log = { version = "0.4.6", features = ["std"] }
log_buffer = { version = "1.1.0", git = "https://github.com/stallmanifold/log-buffer" }
